[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/angelica/Dock/Phone.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/Dock/clock.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0862745, 0.0745098, 0.0745098, 0.921569 )
draw_center = false
border_width_left = 8
border_width_top = 46
border_width_right = 8
border_width_bottom = 30
border_color = Color( 0.243137, 0.262745, 0.278431, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 11

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0862745, 0.0745098, 0.0745098, 0.8 )
border_width_left = 8
border_width_top = 46
border_width_right = 8
border_width_bottom = 30
border_color = Color( 0.129412, 0.145098, 0.156863, 0.796078 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 11

[sub_resource type="DynamicFontData" id=3]
font_path = "res://addons/angelica/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 2
outline_color = Color( 0.109804, 0.109804, 0.109804, 0.72549 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 2
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0.109804, 0.109804, 0.109804, 0.72549 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 2
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxEmpty" id=6]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 0.0
content_margin_bottom = 8.0

[sub_resource type="DynamicFontData" id=7]
font_path = "res://addons/angelica/fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=8]
outline_size = 3
outline_color = Color( 0.270588, 0.270588, 0.270588, 1 )
extra_spacing_bottom = 3
extra_spacing_char = 4
font_data = SubResource( 7 )

[sub_resource type="StyleBoxEmpty" id=9]
content_margin_right = 2.0

[node name="Phone" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 121.021 ]
}

[node name="Cover" type="Panel" parent="."]
pause_mode = 2
margin_left = -1.0
margin_right = 242.0
margin_bottom = 461.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="Panel" parent="."]
pause_mode = 2
margin_left = 1.81079
margin_top = 0.621582
margin_right = 236.811
margin_bottom = 455.622
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 76.9118
margin_top = 428.5
margin_right = 195.912
margin_bottom = 458.5
size_flags_horizontal = 5
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0.513726, 0.513726, 0.513726, 0.752941 )
bbcode_enabled = true
bbcode_text = "Angelica 213
"
text = "Angelica 213
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock" type="RichTextLabel" parent="."]
margin_left = 89.0
margin_top = 46.0
margin_right = 162.0
margin_bottom = 73.0
size_flags_horizontal = 5
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 0.752941 )
bbcode_enabled = true
bbcode_text = "20:04:00"
text = "20:04:00"
scroll_active = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="clock"]
autostart = true

[node name="Body" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 71.0
margin_right = 232.0
margin_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
meta_underlined = false
tab_size = 7
scroll_active = false
override_selected_font_color = true
custom_effects = [ null, null, null, null, null ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body2" type="RichTextLabel" parent="."]
margin_left = 84.0
margin_top = 9.0
margin_right = 232.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 10, 10 )
focus_next = NodePath("../LineEdit")
size_flags_horizontal = 4
size_flags_vertical = 10
theme = SubResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url=selfie][img]res://img/32/1f4f9.png[/img] [/url][url=screenshot] [img]res://img/32/1f4f7.png[/img] [/url][url=volume][img]res://img/32/1f569.png[/img] [/url]"
meta_underlined = false
tab_size = 7
text = "    "
scroll_active = false
override_selected_font_color = true
custom_effects = [ null, null, null, null, null ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 4.97971, 4.14595 )

[connection signal="timeout" from="clock/Timer" to="clock" method="_on_Timer_timeout"]
[connection signal="meta_clicked" from="Body" to="." method="_on_Body_meta_clicked"]
[connection signal="meta_hover_ended" from="Body" to="." method="_on_Body_meta_hover_ended"]
[connection signal="meta_hover_started" from="Body" to="." method="_on_Body_meta_hover_started"]
[connection signal="meta_clicked" from="Body2" to="." method="_on_Body_meta_clicked"]
[connection signal="meta_hover_ended" from="Body2" to="." method="_on_Body2_meta_hover_ended"]
[connection signal="meta_hover_started" from="Body2" to="." method="_on_Body2_meta_hover_started"]
